--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
     {
       "src": "/(.*)",
       "dest": "main.py"
+    },
+    {
+      "src": "manga/(.*)",
+      "dest": "main.py"
     }
   ]
 }
